finally fixed that flicker when switching slides. it was the back face visibility on the .front div. had to remove it.  also removed the footer thing

--- a/app/assets/stylesheets/Search/search_page.css.scss
+++ b/app/assets/stylesheets/Search/search_page.css.scss
@@ -341,7 +341,7 @@ $colorBorderWeight: 6px solid;
 }
 
 .trip_result_thumbnail_div{
-  height: 400px;
+  height: 440px;
   padding: 0;
   position: relative;
   border: none;
