--- a/app/assets/stylesheets/trip_activities/carddeck.css.scss
+++ b/app/assets/stylesheets/trip_activities/carddeck.css.scss
@@ -323,6 +323,139 @@ img.relative_image{
   }
 }
 
+/* front pane holds the image */
+.front {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: $black;
+  @include respond-to(portrait){
+    overflow: auto;
+  }
+}
+
+/* Show Hide Map Button Group */
+#moreShowHideGroup{
+  z-index: 6;
+  position: absolute;
+  bottom: 2%;
+  right: 0%;
+  height: 10px;
+  min-width: 100%;
+  padding:5px;
+  @include respond-to(portrait){
+    bottom: 42%;
+    z-index: 4;
+  }
+  @include respond-to(small){
+  bottom: 42%;
+  z-index: 4;
+  }
+}
+
+#mapShow{
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  background: rgba(0,0,0,0.6) no-repeat center;
+  background-image: "icon-globe";
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid $white;
+  text-align: center;
+  color: $white;
+  font-size: 35px;
+  text-align: center;
+  line-height: 50px;
+  cursor:pointer;
+
+  i{
+    position:relative;
+    top: 0%;
+    left: -13%;
+    margin:0;
+  }
+  &:hover{
+    color: $gray;
+    background: rgba(255, 255,255,0.6);
+    border: 3px solid $gray;
+  }
+  &.active{
+    font-size: 35px;
+    color: $gray;
+    background: rgba(255, 255,255,0.6);
+    border: 3px solid $gray;
+      &:hover{
+        color: $white;
+        background: rgba(0,0,0,0.6) no-repeat center;
+        border: 3px solid $white;
+      }
+  }
+}
+
+#mapHideGroup{
+  z-index: 6;
+  position: absolute;
+  bottom: 2%;
+  right: 0%;
+  height: 10px;
+  min-width: 100%;
+  padding:5px;
+  @include respond-to(portrait){
+    z-index: 4;
+  }
+  @include respond-to(small){
+  z-index: 4;
+  }
+}
+
+
+#mapHide{
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  background: rgba(0,0,0,0.6) no-repeat center;
+  background-image: "icon-remove";
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid $white;
+  text-align: center;
+  color: $white;
+  font-size: 35px;
+  text-align: center;
+  line-height: 50px;
+  cursor:pointer;
+
+  i{
+    position:relative;
+    top: 0%;
+    left: -13%;
+    margin:0;
+  }
+  &:hover{
+    color: $gray;
+    background: rgba(255, 255,255,0.6);
+    border: 3px solid $gray;
+  }
+  &.active{
+    font-size: 35px;
+    color: $gray;
+    background: rgba(255, 255,255,0.6);
+    border: 3px solid $gray;
+      &:hover{
+        color: $white;
+        background: rgba(0,0,0,0.6) no-repeat center;
+        border: 3px solid $white;
+      }
+  }
+}
+
 .always_here{
   // min-height: 100%;
   // min-width: 100%;
